<resources>
    <string name="app_name">天天语记</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="spinner_title">Choose Label</string>
    <string name="title_activity_trash">trash</string>
    <string name="all_note">所有笔记</string>
    <string name="my_favorite">我的收藏</string>
    <string name="notification">提醒事项</string>
    <string name="labels">标签</string>
    <string name="trash">垃圾箱</string>
    <string name="setting">设置</string>
    <string name="share">分享</string>
    <string name="about">关于</string>
    <string name="text_note">文本笔记</string>
    <string name="add_new_label">添加新标签</string>
    <string name="float_voice">录音</string>
    <string name="float_list">清单</string>
    <string name="float_text">文本</string>
    <string name="search">搜索</string>
    <string name="voice_note">录音笔记</string>
    <string name="list_note">清单笔记</string>
    <string name="add_your_new_label">在这里添加你的标签</string>
    <string name="ok">确定</string>
    <string name="note_title_required">标题(必需)</string>
    <string name="add_new_item">添加新清单</string>
    <string name="note_title">标题</string>
    <string name="note_text_goes_here">在这里写文本笔记</string>
    <string name="no_notes_founds">没有发现笔记</string>
    <string name="add_new_label_center_in_dialog">添加新标签 :</string>
    <string name="update_this_item">更新这个清单 :</string>
    <string name="enter_your_new_item_here">在这里填入你的新清单项</string>
    <string name="update_this_label">更新这个标签 :</string>
    <string name="enter_your_new_label_here">在这里填入你的新标签</string>
    <string name="sort_by">按如下方式排序 :</string>
    <string name="creation_date">创建时间</string>
    <string name="notification_date">通知时间</string>
    <string name="a_z">首字母 A-Z</string>
    <string name="z_a">首字母 Z-A</string>
    <string name="add_notification">添加提醒</string>
    <string name="choose_date_here">在这里选择日期</string>
    <string name="choose_time_here">在这里选择时间</string>
    <string name="introduce_text">一款简洁高效智能的记事本应用</string>
    <string name="add_new_item_center_in_dialog">添加新清单 :</string>
    <string name="default_note_background_color">默认的笔记背景颜色</string>
    <string name="default_note_text_color">默认的笔记字体颜色</string>
    <string name="text_size">字体大小</string>
    <string name="notification_sound">提醒声音</string>
    <string name="no_labels_founds">没有发现标签</string>
    <string name="no_label">没有标签</string>
    <string name="no_notification">没有提醒</string>
    <string name="click_to_start_recording">点击左侧麦克风进行录音</string>

    <string-array name="FontSize">
        <item>小</item>
        <item>中</item>
        <item>大</item>
    </string-array>
</resources>
