<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFFFFF">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/fab_margin"
        android:paddingLeft="@dimen/fab_margin">

        <TextView
            android:id="@+id/title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dip"
            android:gravity="left"
            android:text="@string/sort_by"
            android:textColor="#1B87E1"
            android:textSize="18sp"
            android:textStyle="bold" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RadioButton
                android:id="@+id/creation_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/creation_date" />

            <RadioButton
                android:id="@+id/notification_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notification_date" />

            <RadioButton
                android:id="@+id/alphabet_AZ"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/a_z" />

            <RadioButton
                android:id="@+id/alphabet_ZA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/z_a" />
        </RadioGroup>
    </LinearLayout>

</RelativeLayout>