<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFFFFF">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/fab_margin"
            android:layout_marginRight="16dp"
            android:layout_marginTop="15dip"
            android:gravity="left"
            android:text="@string/update_this_item"
            android:textColor="#1B87E1"
            android:textSize="18dip"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/update_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/fab_margin"
            android:layout_marginRight="16dp"
            android:layout_marginTop="@dimen/fab_margin"
            android:gravity="left"
            android:hint="@string/enter_your_new_item_here" />

        <Button
            android:id="@+id/update_label_ok"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="#EEEEEE"
            android:gravity="center"
            android:text="@string/ok"
            android:textAlignment="center"
            android:textColor="#1B87E1"
            android:textSize="18dip"
            android:textStyle="bold" />

    </LinearLayout>

</RelativeLayout>