<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fadingEdgeLength="0dp"
    android:fillViewport="true"
    android:overScrollMode="never"
    android:scrollbars="none">

    <RelativeLayout
        android:id="@+id/Parant_Layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/Current_Creation_Datetime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:paddingRight="@dimen/fab_margin"
            android:paddingTop="2dp"
            android:text="Creation DateTime"
            android:textColor="#939393" />

        <EditText
            android:id="@+id/Note_title"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="@dimen/fab_margin"
            android:background="@android:color/transparent"
            android:hint="@string/note_title"
            android:paddingLeft="@dimen/fab_margin"
            android:paddingRight="@dimen/fab_margin"
            android:text=""
            android:textColor="#000000"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/Note_body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/Note_title"
            android:background="@android:color/transparent"
            android:hint="@string/note_text_goes_here"
            android:inputType="textCapSentences|textMultiLine"
            android:paddingLeft="@dimen/fab_margin"
            android:paddingRight="@dimen/fab_margin"
            android:scrollHorizontally="false"
            android:textColor="#000000" />

        <View
            android:id="@+id/h_line_2"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_below="@+id/Note_body"
            android:layout_marginLeft="@dimen/fab_margin"
            android:layout_marginRight="@dimen/fab_margin"
            android:layout_marginTop="@dimen/fab_margin"
            android:background="#DADADA" />

        <RelativeLayout
            android:id="@+id/Voice_Content"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_below="@+id/h_line_2"
            android:layout_marginLeft="@dimen/fab_margin"
            android:layout_marginRight="@dimen/fab_margin"
            android:layout_marginTop="@dimen/fab_margin"
            android:visibility="visible">

            <ImageView
                android:id="@+id/record_btn"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_mic" />

            <ImageView
                android:id="@+id/record_stop"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_stop"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/clickToStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginRight="10dp"
                android:text="@string/click_to_start_recording" />

            <Chronometer
                android:id="@+id/recording_timer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text=""
                android:textColor="#000000"
                android:visibility="invisible" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/Play_Content"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_below="@+id/h_line_2"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="@dimen/fab_margin"
            android:visibility="invisible">

            <ImageView
                android:id="@+id/play_btn"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_play" />

            <ImageView
                android:id="@+id/pause_btn"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_pause"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/current_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/fab_margin"
                android:layout_toRightOf="@+id/play_btn"
                android:text="00 : 00" />

            <SeekBar
                android:id="@+id/SeekBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/current_time"
                android:layout_toStartOf="@id/Totale_time" />

            <TextView
                android:id="@+id/Totale_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/fab_margin"
                android:layout_toLeftOf="@id/delete_record"
                android:text="00 : 00" />

            <ImageView
                android:id="@+id/delete_record"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_cancel" />
        </RelativeLayout>

        <View
            android:id="@+id/h_line"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_below="@+id/Voice_Content"
            android:layout_marginLeft="@dimen/fab_margin"
            android:layout_marginRight="@dimen/fab_margin"
            android:layout_marginTop="@dimen/fab_margin"
            android:background="#DADADA"
            android:visibility="visible" />

        <LinearLayout
            android:id="@+id/LL1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/h_line"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/small_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_label" />

            <TextView
                android:id="@+id/label_text_sub"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/nav_header_vertical_spacing"
                android:layout_marginTop="2dp"
                android:text="Work Label" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LL2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/LL1"
            android:layout_marginLeft="10dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/small_icon_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_alarm" />

            <TextView
                android:id="@+id/notify_text_sub"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/nav_header_vertical_spacing"
                android:layout_marginTop="2dp"
                android:text="10/01/2018 23:53" />
        </LinearLayout>

    </RelativeLayout>

</ScrollView>
